Closed Bug 820550 Opened 13 years ago Closed 13 years ago

WebRTC assertion failure [@sipcc::PeerConnectionImpl::CheckApiState]

Categories

(Core :: WebRTC, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: posidron, Assigned: ehugg)

References

Details

(Keywords: assertion, crash, regression, Whiteboard: [WebRTC], [blocking-webrtc+] [qa-])

Crash Data

Attachments

(3 files)

Attached file callstack
This happened during fuzzing the SDP after the "big lock" patch landed. The signature looks new to me. Tested with m-i changeset: 115674:740c8dd81b04
Attached file SDP
This is the last known SDP for that crash.
Ah, this is an easy one. We need to change the PC_AUTO_ENTER_API_CALL() to PC_AUTO_ENTER_API_CALL_NO_CHECK() in CloseInt.
Assignee: nobody → ethanhugg
OS: Mac OS X → All
Priority: -- → P1
Hardware: x86_64 → All
Whiteboard: [WebRTC], [blocking-webrtc+]
Comment on attachment 691406 [details] [diff] [review] Signaling - stop checking API state in CloseInt It does appear to be that easy... unless it's a trap... CloseInt is also called from the PC dtor and should not be concerned about API state.
Attachment #691406 - Flags: review?(ekr)
Attachment #691406 - Flags: review?(ekr) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Whiteboard: [WebRTC], [blocking-webrtc+] → [WebRTC], [blocking-webrtc+] [qa-]
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: