Bug 820550 - Signaling - stop checking API state in CloseInt r=ekr